--- a/app/index.css
+++ b/app/index.css
@@ -30,6 +30,14 @@ body {
   box-sizing: border-box;
 }
 
+.visuallyHidden {
+  overflow: hidden;
+}
+
+.visuallyHidden * {
+  overflow: hidden;
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
