--- a/src/components/Blog/BlogPost/NotionBlocksRenderer.css
+++ b/src/components/Blog/BlogPost/NotionBlocksRenderer.css
@@ -1,7 +1,7 @@
 .rnr-container {
   display: grid;
   grid-template-columns: 100%;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .rnr-container h1 {
@@ -70,5 +70,23 @@
 
 .rnr-container :any-link,
 .rnr-container a {
-  color: #0eb7e4;
+  color: #1b9aaa;
+  text-decoration: none;
+}
+
+.rnr-container a[target="_blank"]:after {
+  content: "";
+  background-image: url("/assets/misc/new-tab.svg");
+  background-position: center;
+  background-size: contain;
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 0.25rem;
+}
+
+.rnr-container hr {
+  margin: 0.5rem 0;
+  opacity: 0.25;
 }
